--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,11 @@
 databaseChangeLog:
   - include:
       file: db/changelog/changes/01-create-users-table.yaml
+  - include:
+      file: db/changelog/changes/02-create-roles-table.yaml
+  - include:
+      file: db/changelog/changes/03-create-users-roles-table.yaml
+  - include:
+      file: db/changelog/changes/04-insert-roles-in-roles-table.yaml
+  - include:
+      file: db/changelog/changes/05-insert-admin-to-users-table.yaml
