--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -9,3 +9,5 @@ databaseChangeLog:
       file: db/changelog/changes/04-insert-roles-in-roles-table.yaml
   - include:
       file: db/changelog/changes/05-insert-admin-to-users-table.yaml
+  - include:
+      file: db/changelog/changes/06-create-projects-table.yaml
