--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,5 @@ databaseChangeLog:
       file: db/changelog/changes/02-create-projects-table.yaml
   - include:
       file: db/changelog/changes/03-create-tasks-table.yaml
+  - include:
+      file: db/changelog/changes/04-create-comments-table.yaml
