--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.config.import=file:env.properties
+
 server.servlet.context-path=/api
 spring.datasource.url=jdbc:mysql://localhost:3306/task_management_app
 spring.datasource.username=root
@@ -7,5 +9,6 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jackson.deserialization.fail-on-unknown-properties=true
-jwt.expiration=3600000
+jwt.expiration=86400000
 jwt.secret=fmeag0rqu9b0BVtuvb_B9BGongojpqab-grbOPV#Vtvp0B8bIIV80
+dropbox.access.token=${DROPBOX_ACCESS_TOKEN}
