--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,3 +7,5 @@ databaseChangeLog:
       file: db/changelog/changes/03-create-tasks-table.yaml
   - include:
       file: db/changelog/changes/04-create-comments-table.yaml
+  - include:
+      file: db/changelog/changes/05-create-attachments-table.yaml
