--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -9,3 +9,5 @@ databaseChangeLog:
       file: db/changelog/changes/04-create-comments-table.yaml
   - include:
       file: db/changelog/changes/05-create-attachments-table.yaml
+  - include:
+      file: db/changelog/changes/06-create-labels-table.yaml
