--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.config.import=file:env1.properties
+spring.config.import=file:env.properties
 
 server.servlet.context-path=/api
 spring.datasource.url=jdbc:mysql://localhost:3306/task_management_app
